[GF15] Ajout de la partie Java pour reset le password

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -14,6 +14,7 @@ endpoint.regexTrainings=/formations/regex
 
 endpoint.collaborators=/collaborateurs
 endpoint.user=/user
+endpoint.collaboratorspassword=/collaborateurs/{collaboratorPassword}/collaborateursid/{collabId}
 endpoint.userdisconnect=/userdisconnect
 endpoint.getuserrole=/getuserrole
 endpoint.trainings=/formations
