[GF15] Ajout de la partie Java pour envoyer un mail

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -27,3 +27,4 @@ endpoint.collaboratorsNotAffectedBySession=/sessions/{id}/collaboratorsnotaffect
 endpoint.collaboratorsAffectedBySession=/sessions/{id}/collaboratorsaffected
 endpoint.requests=/requests
 endpoint.collaboratorsRequestingListByTrainingSession=/requests/session/{id}/collaborators
+endpoint.collaboratorsemailpassword=/sendemail/{collaboratorId}
