[develop] Ajout du Token #1

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -28,3 +28,4 @@ endpoint.collaboratorsAffectedBySession=/sessions/{id}/collaboratorsaffected
 endpoint.requests=/requests
 endpoint.collaboratorsRequestingListByTrainingSession=/requests/session/{id}/collaborators
 endpoint.collaboratorsemailpassword=/sendemail/{collaboratorId}
+endpoint.isconnected=/sendtoken
