[US#GF5] Adaptation BDD Version 1

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -18,6 +18,7 @@ endpoint.collaboratorspassword=/collaborateurs/{collaboratorPassword}/collaborat
 endpoint.userdisconnect=/userdisconnect
 endpoint.getuserrole=/getuserrole
 endpoint.trainings=/formations
+endpoint.trainingtopic=/formations/{trainingTopic}/formationid/{formationId}
 endpoint.topics=/themes
 endpoint.sessions=/sessions
 endpoint.sessionsbyid=/formations/{id}/sessions
