[US#GF6] Adaptation BDD

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -27,6 +27,8 @@ endpoint.alreadyrequestedsession=/formations/{trainingId}/alreadyrequestedsessio
 endpoint.collaboratorsbysession=/sessions/{idTrainingSession}/collaborators
 endpoint.collaboratorsNotAffectedBySession=/sessions/{id}/collaboratorsnotaffected
 endpoint.collaboratorsAffectedBySession=/sessions/{id}/collaboratorsaffected
+endpoint.addcollaboratortotrainingsession=/sessions/{id_session}/{id_collaborators}/collaborators
+
 endpoint.requests=/requests
 endpoint.collaboratorsRequestingListByTrainingSession=/requests/session/{id}/collaborators
 endpoint.collaboratorsemailpassword=/sendemail/{collaboratorId}
