[US#GF6] Adaptation BDD to get all collaborators whose request has not yet been accepted

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -28,6 +28,7 @@ endpoint.collaboratorsbysession=/sessions/{idTrainingSession}/collaborators
 endpoint.collaboratorsNotAffectedBySession=/sessions/{id}/collaboratorsnotaffected
 endpoint.collaboratorsAffectedBySession=/sessions/{id}/collaboratorsaffected
 endpoint.addcollaboratortotrainingsession=/sessions/{id_session}/{id_collaborators}/collaborators
+endpoint.getcollaboratortotrainingsession=/sessions/{id_session}/collaborators
 
 endpoint.requests=/requests
 endpoint.collaboratorsRequestingListByTrainingSession=/requests/session/{id}/collaborators
