[US#GF6] Ajout de la suppression des thèmes

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -20,6 +20,7 @@ endpoint.getuserrole=/getuserrole
 endpoint.trainings=/formations
 endpoint.trainingtopic=/formations/{trainingTopic}/formationid/{formationId}
 endpoint.topics=/themes
+endpoint.removetopic=/removetopic
 endpoint.sessions=/sessions
 endpoint.sessiontoremove=/sessionstoremove
 endpoint.sessionsbyid=/formations/{id}/sessions
