[US#develop] Modifs de demande de formation

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -32,6 +32,7 @@ endpoint.addcollaboratortotrainingsession=/sessions/{id_session}/{id_collaborato
 endpoint.getcollaboratortotrainingsession=/sessions/{id_session}/collaborators
 
 endpoint.requests=/requests
+endpoint.listrequests=/listrequests/{training_id}/{collab_id}
 endpoint.collaboratorsRequestingListByTrainingSession=/requests/session/{id}/collaborators
 endpoint.collaboratorsemailpassword=/sendemail/{collaboratorId}
 endpoint.isconnected=/sendtoken
