[US#GF26] Adaptation BDD pour la suppression des formations

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -21,6 +21,7 @@ endpoint.trainings=/formations
 endpoint.trainingtopic=/formations/{trainingTopic}/formationid/{formationId}
 endpoint.topics=/themes
 endpoint.removetopic=/removetopic
+endpoint.removetraining=/removetraining
 endpoint.sessions=/sessions
 endpoint.sessiontoremove=/sessionstoremove
 endpoint.sessionsbyid=/formations/{id}/sessions
