[US#GF24] Adaptation BDD version 7

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -36,3 +36,5 @@ endpoint.requests=/requests
 endpoint.collaboratorsRequestingListByTrainingSession=/requests/session/{id}/collaborators
 endpoint.collaboratorsemailpassword=/sendemail/{collaboratorId}
 endpoint.isconnected=/sendtoken
+
+endpoint.sessioncollabs=/formations/sessions/collaborators
