--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -30,7 +30,7 @@ endpoint.collaboratorsNotAffectedBySession=/sessions/{id}/collaboratorsnotaffect
 endpoint.collaboratorsAffectedBySession=/sessions/{id}/collaboratorsaffected
 endpoint.addcollaboratortotrainingsession=/sessions/{id_session}/{id_collaborators}/collaborators
 endpoint.getcollaboratortotrainingsession=/sessions/{id_session}/collaborators
-
+endpoint.getRequestedSessions=/sessions/{collaborator_id}/requestedSessions
 endpoint.requests=/requests
 endpoint.collaboratorsRequestingListByTrainingSession=/requests/session/{id}/collaborators
 endpoint.collaboratorsemailpassword=/sendemail/{collaboratorId}
