[US#GF8] Tableau SOUHAIT version 3

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -38,3 +38,5 @@ endpoint.collaboratorsemailpassword=/sendemail/{collaboratorId}
 endpoint.isconnected=/sendtoken
 
 endpoint.sessioncollabs=/formations/sessions/collaborators
+
+endpoint.wish=/wish/{collaborator_id}
