--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -40,3 +40,8 @@ endpoint.isconnected=/sendtoken
 endpoint.sessioncollabs=/formations/sessions/collaborators
 
 endpoint.wish=/wish/{collaborator_id}
+endpoint.allwishes=/allwishes
+endpoint.kowishtoadd=/kowishtoupdate/{collaborator_id}
+endpoint.okwishtoadd=/okwishtoupdate/{collaborator_id}
+endpoint.kowishtoremove=/kowishtoremove/{collaborator_id}
+endpoint.okwishtoremove=/okwishtoremove/{collaborator_id}
