--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -47,3 +47,5 @@ endpoint.kowishtoadd=/kowishtoupdate/{collaborator_id}
 endpoint.okwishtoadd=/okwishtoupdate/{collaborator_id}
 endpoint.kowishtochange=/kowishtochange/{collaborator_id}
 endpoint.okwishtochange=/okwishtochange/{collaborator_id}
+endpoint.allvalidatedwishes=/allvalidatedwishes
+endpoint.ischeckedwishestoupdate=/ischeckedwishestoupdate
