[GF#19] HTML + Adaptation BDD Version 1

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -13,6 +13,8 @@ endpoint.regexCollaborators=/collaborateurs/regex
 endpoint.regexTrainings=/formations/regex
 
 endpoint.collaborators=/collaborateurs
+endpoint.updatecollaborator=/updatecollaborator
+endpoint.collaboratorbyid=/getcollaborator/{collab_id}
 endpoint.user=/user
 endpoint.collaboratorspassword=/collaborateurs/{collaboratorPassword}/collaborateursid/{collabId}
 endpoint.userdisconnect=/userdisconnect
@@ -47,3 +49,4 @@ endpoint.kowishtoadd=/kowishtoupdate/{collaborator_id}
 endpoint.okwishtoadd=/okwishtoupdate/{collaborator_id}
 endpoint.kowishtochange=/kowishtochange/{collaborator_id}
 endpoint.okwishtochange=/okwishtochange/{collaborator_id}
+
