[US#GF19] Modification de l'image

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -14,6 +14,7 @@ endpoint.regexTrainings=/formations/regex
 
 endpoint.collaborators=/collaborateurs
 endpoint.updatecollaborator=/updatecollaborator
+endpoint.updatecollaboratorpicture=/uploadFile
 endpoint.collaboratorbyid=/getcollaborator/{collab_id}
 endpoint.user=/user
 endpoint.collaboratorspassword=/collaborateurs/{collaboratorPassword}/collaborateursid/{collabId}
