[US#GF11/12] Adaptation BDD

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -47,3 +47,7 @@ endpoint.kowishtoadd=/kowishtoupdate/{collaborator_id}
 endpoint.okwishtoadd=/okwishtoupdate/{collaborator_id}
 endpoint.kowishtochange=/kowishtochange/{collaborator_id}
 endpoint.okwishtochange=/okwishtochange/{collaborator_id}
+
+endpoint.feedbacks=/feedbacks
+endpoint.feedback=/feedback/{collab_id}
+endpoint.trainingscore=/trainingscore
