[US#GF11/12] Adaptation BDD Version 6

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -51,3 +51,4 @@ endpoint.okwishtochange=/okwishtochange/{collaborator_id}
 endpoint.feedbacks=/feedbacks
 endpoint.feedback=/feedback/{collab_id}
 endpoint.trainingscore=/trainingscore
+endpoint.trainingstogivefeedbacks=/trainingstogivefeedbacks/{collab_id}
