[US#GF13]Adaptation  BDD : getFeedbackCommentByTraining & deleteFeedbackComment

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -59,3 +59,5 @@ endpoint.feedbacks=/feedbacks
 endpoint.feedback=/feedback/{collab_id}
 endpoint.trainingscore=/trainingscore
 endpoint.trainingstogivefeedbacks=/trainingstogivefeedbacks/{collab_id}
+endpoint.feedbackcomment=/feedbackcomment/{training_id}
+endpoint.deletefeedbackcomment=/deletefeedbackcomment
