[US#GF14] Adaptation BDD

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -61,3 +61,5 @@ endpoint.trainingscore=/trainingscore
 endpoint.trainingstogivefeedbacks=/trainingstogivefeedbacks/{collab_id}
 endpoint.feedbackcomment=/feedbackcomment/{training_id}
 endpoint.deletefeedbackcomment=/deletefeedbackcomment
+endpoint.addfeedbacklikes=/addfeedbacklikes/{collaborator_id}
+endpoint.removefeedbacklikes=/removefeedbacklikes/{collaborator_id}
