[develop] demande de formation

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -63,3 +63,5 @@ endpoint.feedbackcomment=/feedbackcomment/{training_id}
 endpoint.deletefeedbackcomment=/deletefeedbackcomment
 endpoint.addfeedbacklikes=/addfeedbacklikes/{collaborator_id}
 endpoint.removefeedbacklikes=/removefeedbacklikes/{collaborator_id}
+
+endpoint.requestsassign=/requestsassign/{session_id}/{id_collaborators}
