[develop] Refactor de assigncollaborator pour enlever des fonctions non utilisées + debut de test avec test-unit sur assigncollaborator

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -43,8 +43,9 @@ endpoint.collaboratorsemailpassword=/sendemail/{collaboratorId}
 endpoint.isconnected=/sendtoken
 
 endpoint.sessioncollabs=/formations/sessions/collaborators
+endpoint.addwish=/addwish/{collaborator_id}
 
-endpoint.wish=/wish/{collaborator_id}
+endpoint.isnotcheckedwishes=/isnotcheckedwishes
 endpoint.allwishes=/allwishes
 endpoint.kowishtoadd=/kowishtoupdate/{collaborator_id}
 endpoint.okwishtoadd=/okwishtoupdate/{collaborator_id}
