--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,19 @@
 
     <name>C360 Maven Webapp</name>
     <groupId>Viseo</groupId>
-    <artifactId>C360_formation</artifactId>
+    <artifactId>C360-Training</artifactId>
     <packaging>war</packaging>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
+
         <org.springframework.version>4.2.2.RELEASE</org.springframework.version>
         <com.jayway.jsonpath.version>2.0.0</com.jayway.jsonpath.version>
 
         <spring.framework.version>3.0.5.RELEASE</spring.framework.version>
-        <spring.amqp.version>1.0.0.M3</spring.amqp.version>
+        <spring.amqp.version>1.4.6.RELEASE</spring.amqp.version>
         <rabbitmq.version>2.2.0</rabbitmq.version>
     </properties>
     <dependencies>
@@ -64,18 +65,6 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>1.10.19</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>${org.springframework.version}</version>
-            <scope>test</scope>
-        </dependency>
 
         <!-- SPRING -->
         <dependency>
@@ -89,6 +78,7 @@
             <artifactId>spring-erlang</artifactId>
             <version>${spring.amqp.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.rabbitmq</groupId>
             <artifactId>amqp-client</artifactId>
@@ -296,6 +286,22 @@
             <artifactId>xstream</artifactId>
             <version>1.3.1</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${org.springframework.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>C360_competence</finalName>
