[develop] RabbitMQ Filtrage et Purge des queues V2

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -41,6 +41,7 @@ endpoint.listrequests=/listrequests/{training_id}/{collab_id}
 endpoint.collaboratorsRequestingListByTrainingSession=/requests/session/{id}/collaborators
 endpoint.collaboratorsemailpassword=/sendemail/{collaboratorId}
 endpoint.isconnected=/sendtoken
+endpoint.connectfrommicroservice=/connectuserinmicroservice
 
 endpoint.sessioncollabs=/formations/sessions/collaborators
 endpoint.addwish=/addwish/{collaborator_id}
