[develop] RabbitMQ Changement de microservice

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -41,7 +41,8 @@ endpoint.listrequests=/listrequests/{training_id}/{collab_id}
 endpoint.collaboratorsRequestingListByTrainingSession=/requests/session/{id}/collaborators
 endpoint.collaboratorsemailpassword=/sendemail/{collaboratorId}
 endpoint.isconnected=/sendtoken
-endpoint.connectfrommicroservice=/connectuserinmicroservice
+endpoint.gethashmap=/gethashmap
+
 
 endpoint.sessioncollabs=/formations/sessions/collaborators
 endpoint.addwish=/addwish/{collaborator_id}
