[develop] RabbitMQ Changement de microservice V2

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -17,6 +17,7 @@ endpoint.updatecollaborator=/updatecollaborator
 endpoint.updatecollaboratorpicture=/uploadFile
 endpoint.collaboratorbyid=/getcollaborator/{collab_id}
 endpoint.user=/user
+endpoint.getuserifalreadyconnectedelsewhere=/getuserifalreadyconnectedelsewhere
 endpoint.collaboratorspassword=/collaborateurs/{collaboratorPassword}/collaborateursid/{collabId}
 endpoint.userdisconnect=/userdisconnect
 endpoint.getuserrole=/getuserrole
@@ -41,7 +42,6 @@ endpoint.listrequests=/listrequests/{training_id}/{collab_id}
 endpoint.collaboratorsRequestingListByTrainingSession=/requests/session/{id}/collaborators
 endpoint.collaboratorsemailpassword=/sendemail/{collaboratorId}
 endpoint.isconnected=/sendtoken
-endpoint.gethashmap=/gethashmap
 
 
 endpoint.sessioncollabs=/formations/sessions/collaborators
