[skillConnection] finir Skill API

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -24,6 +24,8 @@ endpoint.getuserrole=/getuserrole
 endpoint.trainings=/formations
 endpoint.trainingtopic=/formations/{trainingTopic}/formationid/{formationId}
 endpoint.topics=/themes
+endpoint.addskill=/addskill
+endpoint.skills=/skills
 endpoint.removetopic=/removetopic
 endpoint.removetraining=/removetraining
 endpoint.sessions=/sessions
