--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -26,6 +26,8 @@ endpoint.trainingtopic=/formations/{trainingTopic}/formationid/{formationId}
 endpoint.topics=/themes
 endpoint.addskill=/addskill
 endpoint.skills=/skills
+endpoint.skilltraining=/skillid/{skillId}/formationid/{trainingId}
+endpoint.skillbytraining=/skillid/{skillId}
 endpoint.removetopic=/removetopic
 endpoint.removetraining=/removetraining
 endpoint.sessions=/sessions
