--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -7,6 +7,9 @@ jdbc.password= projet360
 
 #Security
 key.jwt=bXNkcHVp
+jwt.secret=mySecret
+jwt.header=Authorization
+
 
 #Endpoints
 endpoint.regexCollaborators=/collaborateurs/regex
