--- a/pom.xml
+++ b/pom.xml
@@ -58,14 +58,14 @@
             <version>4.1.1</version>
         </dependency>
 
-        <!-- TESTING -->
+        <!-- TESTING
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-
+         -->
         <!-- SPRING -->
         <dependency>
             <groupId>org.springframework.amqp</groupId>
@@ -77,18 +77,6 @@
             <groupId>org.springframework.amqp</groupId>
             <artifactId>spring-erlang</artifactId>
             <version>${spring.amqp.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.rabbitmq</groupId>
-            <artifactId>amqp-client</artifactId>
-            <version>4.1.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.13</version>
         </dependency>
 
         <dependency>
@@ -151,16 +139,6 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>${org.springframework.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-web</artifactId>
-            <version>4.0.3.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-config</artifactId>
-            <version>4.0.3.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -294,11 +272,6 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.thoughtworks.xstream</groupId>
-            <artifactId>xstream</artifactId>
-            <version>1.3.1</version>
         </dependency>
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
